--- a/config/storage.yml
+++ b/config/storage.yml
@@ -14,6 +14,7 @@ cloudflare:
   bucket: <%= ENV['R2_BUCKET'] %>
   endpoint: https://<%= ENV['R2_ACCOUNT_ID'] %>.r2.cloudflarestorage.com
   force_path_style: true
+  checksum: false
 
 
 
